--- a/hugo.toml
+++ b/hugo.toml
@@ -13,7 +13,7 @@ email = "tamtra2004@gmail.com"
 firstName = "Trà Trí"
 lastName = "Tâm"
 phone = "0797873821"
-profileImage = "img/Vương Lâm.png"
+profileImage = "img/TraTriTam.png"
 sections = ["skills", "experience", "certifications", "contact"]
 vcardfields = [
     "name",
